--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,24 +1,33 @@
-<!--
+<app-header (featureSelected)="onNavigate($event)"></app-header>
 <div class="container">
-  <app-cockpit></app-cockpit>
+  <div class="row">
+    <div class="col-md-12">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div>
+
+
+
+<!--<div class="container">
+  <app-cockpit
+    (serverCreated)="onServerAdded($event)"
+    (bpCreated)="onBlueprintAdded($event)"
+  ></app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
-      <app-server-element *ngFor="let serverElement of serverElements"></app-server-element>
+      <app-server-element
+        *ngFor="let serverElement of serverElements"
+        [srvElement]="serverElement">
+        <p>
+          <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+          <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+        </p>
+      </app-server-element>
     </div>
   </div>
-</div>
-
--->
+</div>-->
 
 
-<app-header></app-header>
-<div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
-    </div>
-  </div>
-</div>
 
